ch5/deployment/movie-cloud.yaml
##################################################################################################
# Movie Cloud service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: movie-cloud
  labels:
    app: movie-cloud
spec:
  selector:
    app: movie-cloud
  ports:
    - port: 8080
      name: http
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-cloud
  template:
    metadata:
      labels:
        app: movie-cloud
        version: v1
    spec:
      containers:
      - name: movie-cloud
        image: org.jakartaeeprojects/movie-cloud:1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      restartPolicy: Always
