ch5/deployment/recommendation.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation
  labels:
    app: recommendation
spec:
  selector:
    app: recommendation
  ports:
    - port: 8080
      name: http
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
  template:
    metadata:
      labels:
        app: recommendation
        version: v1
    spec:
      containers:
      - name: recommendation
        image: org.jakartaeeprojects/recommendation:1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080        
      restartPolicy: Always
---
