ch5/deployment/movie-cloud-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: movie-cloud-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movie-cloud
spec:
  hosts:
  - "*"
  gateways:
  - movie-cloud-gateway
  http:
  - route:
    - destination:
        host: movie-cloud
        port:
          number: 8080
        subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: movie-cloud
spec:
  host: movie-cloud
  subsets:
  - name: v1
    labels:
      version: v1
---
