ch5/deployment/movie.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-cloud
spec:  
  selector:
    app: movie-cloud
  ports:
  - port: 8080
    name: http
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-cloud
  template:
    metadata:
      labels:
        app: movie-cloud
    spec:
      containers:
      - name: movie-cloud
        image: org.jakartaeeprojects/movie-cloud
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 2
          failureThreshold: 20
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: movie-cloud
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: movie-cloud
              servicePort: 8080
---
