ch5/deployment/recommendation-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
    - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: v1
    fault:
      # abort:
      #   percentage:
      #     value: 50
      #   httpStatus: 500
      delay:
        percentage:
          value: 80
        fixedDelay: 5s
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation
spec:
  host: recommendation
  subsets:
    - name: v1
      labels:
        version: v1
---
